manifests/deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"receivedata:latest","namespace":"dhbw-co2ampel"},"fieldPath":"spec.template.spec.containers[?(@.name==\"receivedata\")].image","pause":"false"}]'
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"eventbus"}]'
  labels:
    app: receivedata
    app.kubernetes.io/component: receivedata
    app.kubernetes.io/instance: receivedata
    app.kubernetes.io/part-of: dhbw-co2ampel
    app.openshift.io/runtime: nodejs
  name: receivedata
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: receivedata
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: receivedata
        deploymentconfig: receivedata
    spec:
      containers:
      - image: replace/me/receivedata:latest
        imagePullPolicy: Always
        name: receivedata
        ports:
        - containerPort: 4000
          protocol: TCP
        resources: 
          limits:
            memory: "128Mi"
            cpu: "0,1"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /posts
            port: 4000
          initialDelaySeconds: 3
          periodSeconds: 5
          failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
